add test_flag and move_group api in admin

--- a/src/admin/templates/list_challenge.html
+++ b/src/admin/templates/list_challenge.html
@@ -4,4 +4,7 @@
     <li>
         <a href="{{ get_url('.import_json', url=return_url) }}">Import JSON</a>
     </li>
+    <li>
+        <a href="{{ get_url('.test_flag', url=return_url) }}">Test Flag</a>
+    </li>
 {% endblock %}
