show writeup stats in admin

--- a/src/admin/templates/list_user.html
+++ b/src/admin/templates/list_user.html
@@ -4,4 +4,7 @@
     <li>
         <a href="{{ get_url('.move_group', url=return_url) }}">Move Group</a>
     </li>
+    <li>
+        <a href="{{ get_url('.writeup_stats') }}">Writeup Stats</a>
+    </li>
 {% endblock %}
