update register form term

--- a/src/admin/templates/status.html
+++ b/src/admin/templates/status.html
@@ -12,8 +12,8 @@
     <h2>创建用户</h2>
     <form action="register_user" method="get">
         <div class="input-group">
-            <span class="input-group-addon">用户名</span>
-            <input name="identity" required class="form-control" placeholder="（仅在后台显示）">
+            <span class="input-group-addon">学校名称</span>
+            <input name="identity" required class="form-control" placeholder="">
         </div>
 
         <br>
