fix wp score calc

--- a/src/admin/templates/user_writeup_stats.html
+++ b/src/admin/templates/user_writeup_stats.html
@@ -39,7 +39,7 @@
                 {% endif %}
             </td>
             <td>{{ row.login_key }}</td>
-            <td>{{ row.login_properties }}</td>
+            <td>{{ row.group_disp }}</td>
             <td>{{ row.score }}</td>
             <td>{{ row.nickname }}</td>
             {% if row.writeup is none %}
