show user anticheat log in admin

--- a/src/admin/templates/list_user.html
+++ b/src/admin/templates/list_user.html
@@ -5,6 +5,9 @@
         <a href="{{ get_url('.move_group', url=return_url) }}">Move Group</a>
     </li>
     <li>
+        <a href="{{ get_url('.anticheat_logs') }}">Show Logs</a>
+    </li>
+    <li>
         <a href="{{ get_url('.writeup_stats') }}">Writeup Stats</a>
     </li>
 {% endblock %}
