make editor resizable

--- a/src/admin/templates/edit_ace.html
+++ b/src/admin/templates/edit_ace.html
@@ -7,6 +7,8 @@
         .ace-editor {
             width: 100%;
             height: 25em;
+            min-height: 10em;
+            resize: vertical;
         }
         textarea[data-ace-id] {
             display: none;
