--- a/src/admin/templates/status.html
+++ b/src/admin/templates/status.html
@@ -12,7 +12,14 @@
     <h2>创建用户</h2>
     <form action="register_user" method="get">
         <div class="input-group">
-            <span class="input-group-addon">学校名称</span>
+            <span class="input-group-addon">邮箱</span>
+            <input name="identity" required class="form-control" placeholder="">
+        </div>
+
+        <br>
+
+        <div class="input-group">
+            <span class="input-group-addon">密码</span>
             <input name="identity" required class="form-control" placeholder="">
         </div>
 
