fix admin register user

--- a/src/admin/templates/status.html
+++ b/src/admin/templates/status.html
@@ -20,7 +20,7 @@
 
         <div class="input-group">
             <span class="input-group-addon">密码</span>
-            <input name="identity" required class="form-control" placeholder="">
+            <input name="password" required class="form-control" placeholder="">
         </div>
 
         <br>
